fix: ck content overflow

--- a/src/assets/scss/plugins/_ckeditor.scss
+++ b/src/assets/scss/plugins/_ckeditor.scss
@@ -4,6 +4,7 @@
 
 .ck {
   &.ck-content {
+    overflow: auto;
     p {
       img {
         max-width: 100%;
